--- a/public/skin/adminhtml/default/default/override.css
+++ b/public/skin/adminhtml/default/default/override.css
@@ -1171,7 +1171,7 @@ img.rule-param-add {
     width: 18px;
     height: 18px;
     stroke: #333;
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 
 /*# sourceMappingURL=override.css.map */
