--- a/public/skin/frontend/base/default/css/checkout.css
+++ b/public/skin/frontend/base/default/css/checkout.css
@@ -1045,6 +1045,25 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
     margin-left: 0px;
 }
 
+/* Hide the "Checkout Method" title and center content before login */
+body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-login .step-title {
+    display: none;
+}
+
+@media only screen and (min-width: 980px) {
+    body:not(.opc-has-progressed-from-login).checkout-onepage-index .col-main {
+        float: none;
+        width: auto;
+        max-width: 960px;
+        margin: 0 auto;
+        padding-right: 0;
+    }
+
+    body:not(.opc-has-progressed-from-login).checkout-onepage-index .col-right {
+        display: none;
+    }
+}
+
 /* -------------------------------------------- *
  * Shipping and Payment methods
  */
