--- a/app/design/adminhtml/default/default/template/dashboard/index.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/index.phtml
@@ -104,11 +104,7 @@ function toggleCal(id) {
 </script>
 <?php endif ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3 class="head-dashboard"><?= $this->__('Dashboard') ?></h3></td>
-        </tr>
-    </table>
+    <h3 class="head-dashboard"><?= $this->__('Dashboard') ?></h3>
 </div>
 <div class="dashboard-container">
     <?= $this->getChildHtml('store_switcher') ?>
