--- a/app/design/adminhtml/default/default/template/newsletter/queue/list.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/queue/list.phtml
@@ -12,12 +12,7 @@
 /** @var Mage_Adminhtml_Block_Newsletter_Queue_Edit $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= Mage::helper('newsletter')->__('Newsletter Queue') ?></h3></td>
-            <td class="form-buttons"></td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('newsletter')->__('Newsletter Queue') ?></h3>
 </div>
 <div>
     <?= $this->getChildHtml('grid') ?>
