--- a/app/design/adminhtml/default/default/template/report/wishlist.phtml
+++ b/app/design/adminhtml/default/default/template/report/wishlist.phtml
@@ -12,11 +12,7 @@
 /** @var Mage_Adminhtml_Block_Report_Wishlist $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3><?= Mage::helper('reports')->__('Wishlist Report') ?></h3></td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('reports')->__('Wishlist Report') ?></h3>
 </div>
 <?= $this->getChildHtml('grid') ?>
 
