--- a/app/design/adminhtml/default/default/template/system/store/container.phtml
+++ b/app/design/adminhtml/default/default/template/system/store/container.phtml
@@ -12,12 +12,8 @@
 /** @var Mage_Adminhtml_Block_System_Store_Store $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="<?= $this->getHeaderWidth() ?>"><?= $this->getHeaderHtml() ?></td>
-            <td class="form-buttons"><?= $this->getButtonsHtml() ?></td>
-        </tr>
-    </table>
+    <?= $this->getHeaderHtml() ?>
+    <p class="content-buttons form-buttons"><?= $this->getButtonsHtml() ?></p>
 </div>
 <div>
     <?= $this->getGridHtml() ?>
