--- a/app/design/adminhtml/default/default/template/tax/importExport.phtml
+++ b/app/design/adminhtml/default/default/template/tax/importExport.phtml
@@ -12,11 +12,7 @@
 /** @var Mage_Adminhtml_Block_Tax_Rate_ImportExport $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3><?= Mage::helper('tax')->__('Import / Export Tax Rates') ?></h3></td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('tax')->__('Import / Export Tax Rates') ?></h3>
 </div>
 <div class="entry-edit">
     <?php if (!$this->getIsReadonly()): ?>
