--- a/app/design/adminhtml/default/default/template/api/roles.phtml
+++ b/app/design/adminhtml/default/default/template/api/roles.phtml
@@ -12,13 +12,9 @@
 /** @var Mage_Adminhtml_Block_Api_Roles $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $this->__('Roles') ?></h3></td>
-            <td class="form-buttons">
-            <button class="scalable add" onclick="window.location='<?= $this->getAddNewUrl() ?>'"><span><?= $this->__('Add New Role') ?></span></button>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->__('Roles') ?></h3>
+    <p class="content-buttons form-buttons">
+        <button class="scalable add" onclick="window.location='<?= $this->getAddNewUrl() ?>'"><span><?= $this->__('Add New Role') ?></span></button>
+    </p>
 </div>
 <?= $this->getGridHtml() ?>
