--- a/app/design/adminhtml/default/default/template/api2/attribute/buttons.phtml
+++ b/app/design/adminhtml/default/default/template/api2/attribute/buttons.phtml
@@ -12,21 +12,15 @@
 /** @var Mage_Api2_Block_Adminhtml_Attribute_Buttons $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;">
-                <h3>
-                    <?= $this->getCaption() ?>
-                </h3>
-            </td>
-            <td class="form-buttons">
-            <?= $this->getBackButtonHtml() ?>
-            <?= $this->getResetButtonHtml() ?>
-            <?= $this->getDeleteButtonHtml() ?>
-            <?= $this->getSaveButtonHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3>
+        <?= $this->getCaption() ?>
+    </h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getBackButtonHtml() ?>
+        <?= $this->getResetButtonHtml() ?>
+        <?= $this->getDeleteButtonHtml() ?>
+        <?= $this->getSaveButtonHtml() ?>
+    </p>
 </div>
 <form action="<?= $this->getUrl('*/*/save') ?>" method="post" id="role_edit_form">
     <?= $this->getBlockHtml('formkey') ?>
