--- a/app/design/adminhtml/default/default/template/blog/post.phtml
+++ b/app/design/adminhtml/default/default/template/blog/post.phtml
@@ -11,14 +11,10 @@
 /** @var Maho_Blog_Block_Adminhtml_Post $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= Mage::helper('blog')->__('Blog Posts') ?></h3></td>
-            <td class="a-right">
-                <?= $this->getButtonsHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('blog')->__('Blog Posts') ?></h3>
+    <p class="content-buttons a-right">
+        <?= $this->getButtonsHtml() ?>
+    </p>
 </div>
 <div>
     <?= $this->getChildHtml('grid') ?>
