--- a/app/design/adminhtml/default/default/template/catalog/product.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product.phtml
@@ -12,14 +12,10 @@
 /** @var Mage_Adminhtml_Block_Catalog_Product $this */
 ?>
 <div class="content-header">
-<table cellspacing="0">
-    <tr>
-        <td style="width:50%;"><h3><?= Mage::helper('catalog')->__('Manage Products') ?></h3></td>
-        <td class="a-right">
-            <?= $this->getButtonsHtml() ?>
-        </td>
-    </tr>
-</table>
+    <h3><?= Mage::helper('catalog')->__('Manage Products') ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getButtonsHtml() ?>
+    </p>
 </div>
 <?php if( !$this->isSingleStoreMode() ): ?>
 <?= $this->getChildHtml('store_switcher') ?>
