--- a/app/design/adminhtml/default/default/template/catalog/product/attribute/set/toolbar/main.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/attribute/set/toolbar/main.phtml
@@ -12,12 +12,8 @@
 /** @var Mage_Adminhtml_Block_Catalog_Product_Attribute_Set_Toolbar_Main $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $this->_getHeader() ?></h3></td>
-            <td class="form-buttons">
-                <?= $this->getNewButtonHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->_getHeader() ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getNewButtonHtml() ?>
+    </p>
 </div>
