--- a/app/design/adminhtml/default/default/template/catalog/product/edit/action/attribute.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit/action/attribute.phtml
@@ -12,16 +12,12 @@
 /** @var Mage_Adminhtml_Block_Catalog_Product_Edit_Action_Attribute_Tab_Attributes $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3><?= Mage::helper('catalog')->__('Update attributes') ?></h3></td>
-            <td class="form-buttons">
-            <?= $this->getBackButtonHtml() ?>
-            <?= $this->getCancelButtonHtml() ?>
-            <?= $this->getSaveButtonHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('catalog')->__('Update attributes') ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getBackButtonHtml() ?>
+        <?= $this->getCancelButtonHtml() ?>
+        <?= $this->getSaveButtonHtml() ?>
+    </p>
 </div>
 <form action="<?= $this->getSaveUrl() ?>" method="post" id="attributes_edit_form" enctype="multipart/form-data">
     <?= $this->getBlockHtml('formkey') ?>
