--- a/app/design/adminhtml/default/default/template/customer/online.phtml
+++ b/app/design/adminhtml/default/default/template/customer/online.phtml
@@ -12,10 +12,6 @@
 /** @var Mage_Adminhtml_Block_Customer_Online $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3><?= Mage::helper('customer')->__('Online Customers') ?></h3></td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('customer')->__('Online Customers') ?></h3>
 </div>
 <?= $this->getChildHtml('grid') ?>
