--- a/app/design/adminhtml/default/default/template/newsletter/template/list.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/template/list.phtml
@@ -12,14 +12,10 @@
 /** @var Mage_Adminhtml_Block_Newsletter_Template $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $this->getHeaderText() ?></h3></td>
-            <td class="form-buttons">
-                <button class="scalable add" onclick="window.location='<?= $this->getCreateUrl() ?>'"><span><?= Mage::helper('newsletter')->__('Add New Template') ?></span></button>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->getHeaderText() ?></h3>
+    <p class="content-buttons form-buttons">
+        <button class="scalable add" onclick="window.location='<?= $this->getCreateUrl() ?>'"><span><?= Mage::helper('newsletter')->__('Add New Template') ?></span></button>
+    </p>
 </div>
 <div>
     <?= $this->getChildHtml('grid') ?>
