--- a/app/design/adminhtml/default/default/template/permissions/userinfo.phtml
+++ b/app/design/adminhtml/default/default/template/permissions/userinfo.phtml
@@ -12,24 +12,20 @@
 /** @var Mage_Adminhtml_Block_Permissions_Buttons $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;">
-                <h3>
-                  <?php if($this->getUser()->getUserId()): ?>
-                  <?php $_userName = $this->getUser()->getFirstname() . ' ' . $this->getUser()->getLastname() ?>
-                  <?= $this->__("Edit User '%s'", $_userName) ?>
-                  <?php else: ?>
-                  <?= $this->__('Add New User') ?>
-                  <?php endif ?>
-                </h3>
-            </td>
-            <td class="form-buttons">
-            <?= $this->getBackButtonHtml() ?>
-            <?= $this->getResetButtonHtml() ?>
-            <?= $this->getDeleteButtonHtml() ?>
-            <?= $this->getSaveButtonHtml() ?>
-   </table>
+    <h3>
+      <?php if($this->getUser()->getUserId()): ?>
+      <?php $_userName = $this->getUser()->getFirstname() . ' ' . $this->getUser()->getLastname() ?>
+      <?= $this->__("Edit User '%s'", $_userName) ?>
+      <?php else: ?>
+      <?= $this->__('Add New User') ?>
+      <?php endif ?>
+    </h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getBackButtonHtml() ?>
+        <?= $this->getResetButtonHtml() ?>
+        <?= $this->getDeleteButtonHtml() ?>
+        <?= $this->getSaveButtonHtml() ?>
+    </p>
 </div>
 <form action="<?= $this->getUrl('*/*/saveuser') ?>" method="post" id="user_edit_form">
     <?= $this->getBlockHtml('formkey') ?>
