--- a/app/design/adminhtml/default/default/template/system/config/edit.phtml
+++ b/app/design/adminhtml/default/default/template/system/config/edit.phtml
@@ -13,14 +13,8 @@
 ?>
 
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td>
-                <h3<?php if($this->getHeaderCss()): ?> class="<?= $this->getHeaderCss()?>"<?php endif ?>><?= Mage::helper('adminhtml')->__($this->getTitle()) ?></h3>
-            </td>
-            <td class="form-buttons"><?= $this->getSaveButtonHtml() ?></td>
-         </tr>
-    </table>
+    <h3<?php if($this->getHeaderCss()): ?> class="<?= $this->getHeaderCss()?>"<?php endif ?>><?= Mage::helper('adminhtml')->__($this->getTitle()) ?></h3>
+    <p class="content-buttons form-buttons"><?= $this->getSaveButtonHtml() ?></p>
 </div>
 <form action="<?= $this->getSaveUrl() ?>" method="post" id="config_edit_form" enctype="multipart/form-data">
     <?= $this->getBlockHtml('formkey') ?>
