--- a/app/design/adminhtml/default/default/template/system/currency/rates.phtml
+++ b/app/design/adminhtml/default/default/template/system/currency/rates.phtml
@@ -12,19 +12,15 @@
 /** @var Mage_Adminhtml_Block_System_Currency $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $this->getHeader() ?></h3></td>
-            <td class="form-buttons">
-                <form action="<?= $this->getImportFormAction() ?>" method="post">
-                    <?= $this->getBlockHtml('formkey') ?>
-                    <?= $this->getServicesHtml() ?>
-                    <?= $this->getImportButtonHtml() ?>
-                </form>
-                <?= $this->getResetButtonHtml() ?>
-                <?= $this->getSaveButtonHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->getHeader() ?></h3>
+    <p class="content-buttons form-buttons">
+        <form action="<?= $this->getImportFormAction() ?>" method="post">
+            <?= $this->getBlockHtml('formkey') ?>
+            <?= $this->getServicesHtml() ?>
+            <?= $this->getImportButtonHtml() ?>
+        </form>
+        <?= $this->getResetButtonHtml() ?>
+        <?= $this->getSaveButtonHtml() ?>
+    </p>
 </div>
 <?= $this->getRatesMatrixHtml() ?>
