--- a/app/design/adminhtml/default/default/template/system/design/edit.phtml
+++ b/app/design/adminhtml/default/default/template/system/design/edit.phtml
@@ -12,18 +12,14 @@
 /** @var Mage_Adminhtml_Block_System_Design_Edit $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3><?= $this->getHeader() ?></h3></td>
-            <td class="form-buttons">
-            <?= $this->getChildHtml('back_button') ?>
-            <?php if($this->getDesignChangeId()): ?>
-                <?= $this->getChildHtml('delete_button') ?>
-            <?php endif ?>
-            <?= $this->getChildHtml('save_button') ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->getHeader() ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getChildHtml('back_button') ?>
+        <?php if($this->getDesignChangeId()): ?>
+            <?= $this->getChildHtml('delete_button') ?>
+        <?php endif ?>
+        <?= $this->getChildHtml('save_button') ?>
+    </p>
 </div>
 <form action="<?= $this->getSaveUrl() ?>" method="post" id="design_edit_form">
     <?= $this->getBlockHtml('formkey') ?>
