--- a/app/design/adminhtml/default/default/template/system/design/index.phtml
+++ b/app/design/adminhtml/default/default/template/system/design/index.phtml
@@ -12,14 +12,10 @@
 /** @var Mage_Adminhtml_Block_System_Design $this */
 ?>
 <div class="content-header">
-<table cellspacing="0">
-    <tr>
-        <td style="width:50%;"><h3><?= Mage::helper('catalog')->__('Design') ?></h3></td>
-        <td class="form-buttons">
-            <?= $this->getChildHtml('add_new_button') ?>
-        </td>
-    </tr>
-</table>
+    <h3><?= Mage::helper('catalog')->__('Design') ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getChildHtml('add_new_button') ?>
+    </p>
 </div>
 <div>
     <?= $this->getChildHtml('grid') ?>
