--- a/app/design/adminhtml/default/default/template/system/email/template/list.phtml
+++ b/app/design/adminhtml/default/default/template/system/email/template/list.phtml
@@ -12,14 +12,10 @@
 /** @var Mage_Adminhtml_Block_System_Email_Template $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $this->getHeaderText() ?></h3></td>
-            <td class="form-buttons">
-                <?= $this->getChildHtml('add_button') ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->getHeaderText() ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getChildHtml('add_button') ?>
+    </p>
 </div>
 <div>
     <?= $this->getChildHtml('grid') ?>
