--- a/app/design/adminhtml/default/default/template/tag/index.phtml
+++ b/app/design/adminhtml/default/default/template/tag/index.phtml
@@ -12,12 +12,8 @@
 /** @var Mage_Adminhtml_Block_Tag_Pending $this */
 ?>
 <div class="content-header">
-<table cellspacing="0">
-    <tr>
-        <td style="width:80%;"><h3 class="<?= $this->getHeaderCssClass() ?>"><?= $this->getHeaderHtml() ?></h3></td>
-        <td class="form-buttons"><?= $this->getCreateButtonHtml() ?></td>
-    </tr>
-</table>
+    <h3 class="<?= $this->getHeaderCssClass() ?>"><?= $this->getHeaderHtml() ?></h3>
+    <p class="content-buttons form-buttons"><?= $this->getCreateButtonHtml() ?></p>
 </div>
 <div id="tag_frame">
     <?= $this->getGridHtml() ?>
