--- a/app/design/adminhtml/default/default/template/tax/toolbar/class/add.phtml
+++ b/app/design/adminhtml/default/default/template/tax/toolbar/class/add.phtml
@@ -10,12 +10,8 @@
  */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $header ?></h3></td>
-            <td class="form-buttons">
-                <button class="scalable add" onclick="window.location.href='<?= $createUrl ?>'"><span><?= Mage::helper('tax')->__('Add New Class') ?></span></button>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $header ?></h3>
+    <p class="content-buttons form-buttons">
+        <button class="scalable add" onclick="window.location.href='<?= $createUrl ?>'"><span><?= Mage::helper('tax')->__('Add New Class') ?></span></button>
+    </p>
 </div>
