--- a/app/design/adminhtml/default/default/template/tax/toolbar/rate/add.phtml
+++ b/app/design/adminhtml/default/default/template/tax/toolbar/rate/add.phtml
@@ -15,12 +15,8 @@
  */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $header ?></h3></td>
-            <td class="form-buttons">
-                <?= $this->getChildHtml('addButton') ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $header ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getChildHtml('addButton') ?>
+    </p>
 </div>
