--- a/app/design/adminhtml/default/default/template/tax/toolbar/rule/save.phtml
+++ b/app/design/adminhtml/default/default/template/tax/toolbar/rule/save.phtml
@@ -10,17 +10,13 @@
  */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $header ?></h3></td>
-            <td class="form-buttons">
-                <?= $this->getBackButtonHtml() ?>
-                <?= $this->getResetButtonHtml() ?>
-                <?= $this->getSaveButtonHtml() ?>
-                <?= $this->getDeleteButtonHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $header ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getBackButtonHtml() ?>
+        <?= $this->getResetButtonHtml() ?>
+        <?= $this->getSaveButtonHtml() ?>
+        <?= $this->getDeleteButtonHtml() ?>
+    </p>
 </div>
 <?php if( $form ): ?>
 <?= $form->toHtml() ?>
