--- a/app/design/adminhtml/default/default/template/widget/view/container.phtml
+++ b/app/design/adminhtml/default/default/template/widget/view/container.phtml
@@ -12,13 +12,9 @@
 /** @var Mage_Adminhtml_Block_Widget_View_Container $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3><?= $this->getHeaderText() ?></h3></td>
-            <td class="form-buttons">
-                <?= $this->getButtonsHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $this->getHeaderText() ?></h3>
+    <p class="content-buttons form-buttons">
+        <?= $this->getButtonsHtml() ?>
+    </p>
 </div>
 <?= $this->getViewHtml() ?>
