--- a/public/skin/adminhtml/default/default/menu.css
+++ b/public/skin/adminhtml/default/default/menu.css
@@ -18,11 +18,30 @@
   margin: 0;
 }
 
-#usermenu ul li a:hover {
-  color: #2f2f2f;
-  text-decoration: none;
-  background: var(--color-main-xs);
-  display: block;
+.user-menu-icons {
+  display: inline-flex;
+  gap: 8px;
+  vertical-align: middle;
+  margin-inline: 8px;
+}
+
+.user-menu-icons a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.9;
+  transition: opacity 0.2s ease;
+  height: 40px;
+}
+
+.user-menu-icons a svg {
+  stroke: #fff;
+  width: 24px;
+  height: 24px;
+}
+
+.user-menu-icons a:hover {
+  opacity: 1;
 }
 
 .nav-bar {
@@ -229,53 +248,5 @@
   background: #273169;
 }
 
-#usermenu {
-  display: inline;
-  float: right;
-  text-align: left;
-}
-#usermenu ul {
-  position: absolute;
-  width: 220px;
-  top: 40px;
-  right: -10000px;
-  display: none;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.207843), 0 0 5px rgba(0, 0, 0, 0.207843);
-  background: #fff;
-}
-#usermenu ul li a:hover {
-  background: #202856;
-}
-#usermenu ul li.last span {
-  border-bottom: none;
-}
-#usermenu li ul li {
-  right: 5px;
-  display: block;
-}
-#usermenu li ul span {
-  border-bottom: 1px dotted hsl(205, 40%, 75%);
-  display: block;
-  line-height: 31px;
-  padding: 0 10px;
-}
-#usermenu li:hover ul {
-  right: 27px;
-  display: block;
-}
-#usermenu li:hover ul a {
-  color: #000537;
-  text-decoration: none;
-  background: hsl(205, 52%, 95%);
-  display: block;
-}
-#usermenu > li > a {
-  padding: 0 27px 0 20px;
-  display: block;
-}
-#usermenu > li > a svg {
-  height: 40px;
-  width: auto;
-}
 
 /*# sourceMappingURL=menu.css.map */
