--- a/app/design/frontend/base/default/template/customer/form/mini.login.phtml
+++ b/app/design/frontend/base/default/template/customer/form/mini.login.phtml
@@ -19,7 +19,7 @@
     <form action="<?= $this->getPostActionUrl() ?>" method="post">
         <?= $this->getBlockHtml('formkey') ?>
         <div class="block-content">
-            <label for="mini-login"><?= $this->__('Email:') ?></label><input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" id="mini-login" class="input-text" />
+            <label for="mini-login"><?= $this->__('Email:') ?></label><input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" id="mini-login" class="input-text" />
             <label for="mini-password"><?= $this->__('Password:') ?></label><input type="password" name="login[password]" id="mini-password" class="input-text" autocomplete="off" />
             <div class="actions">
                 <button type="submit" class="button"><?= $this->__('Login') ?></button>
