--- a/app/design/frontend/base/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/base/default/template/newsletter/subscribe.phtml
@@ -18,7 +18,7 @@
         <div class="block-content">
             <div class="input-box">
                 <label for="newsletter" class="visually-hidden"><?= $this->__('Sign Up for Our Newsletter:') ?></label>
-               <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?= $this->quoteEscape($this->__('Sign up for our newsletter')) ?>" class="input-text required-entry validate-email" aria-required="true" />
+               <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?= $this->quoteEscape($this->__('Sign up for our newsletter')) ?>" class="input-text required-entry validate-email" aria-required="true" />
             </div>
             <div class="actions">
                 <button type="submit" title="<?= $this->quoteEscape($this->__('Subscribe')) ?>" class="button"><?= $this->__('Subscribe') ?></button>
