--- a/app/design/frontend/base/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/login.phtml
@@ -31,7 +31,7 @@ $isAllowedGuestCheckout = $this->helper('checkout')->isAllowedGuestCheckout($thi
             <?php if ($isAllowedGuestCheckout): ?>
                 <h3><?= $this->__('Checkout as a Guest or Register') ?></h3>
             <?php else: ?>
-                <h3><?= $this->__('Register to Create an Account') ?></h3>
+                <h3><?= $this->__('Register to create an account') ?></h3>
             <?php endif ?>
             <p><?= $this->__('By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.') ?></p>
         <?php else: ?>
@@ -76,7 +76,7 @@ $isAllowedGuestCheckout = $this->helper('checkout')->isAllowedGuestCheckout($thi
                 <li>
                     <label for="login-email" class="required"><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
-                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
+                        <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
                     </div>
                 </li>
                 <li>
