--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -15,13 +15,12 @@
 <form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
     <div class="fieldset">
         <h1 class="h2"><?= $this->__('Retrieve your password here') ?></h1>
-        <p class="form-instructions"><?= $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
         <p class="required"><?= $this->__('* Required Fields') ?></p>
         <ul class="form-list">
             <li>
                 <label for="email_address" class="required"><?= $this->__('Email Address') ?></label>
                 <div class="input-box">
-                    <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" />
+                    <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" />
                 </div>
             </li>
             <?= $this->getChildHtml('form.additional.info') ?>
