--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -18,7 +18,7 @@
 ?>
 <div class="account-create">
     <div class="page-title">
-        <h1><?= $this->__('Create an Account') ?></h1>
+        <h1><?= $this->__('Create an account') ?></h1>
     </div>
     <?= $this->getChildHtml('form_fields_before') ?>
     <?= $this->getMessagesBlock()->toHtml() ?>
@@ -38,7 +38,7 @@
                 <li>
                     <label for="email_address" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
-                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" aria-required="true" />
+                        <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" aria-required="true" />
                     </div>
                 </li>
                 <?php if ($this->isNewsletterEnabled()): ?>
@@ -178,7 +178,6 @@
         </ul>
         <?php endif ?>
         <div class="buttons-set">
-            <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>" class="back-link"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
             <button type="submit" title="<?= $this->quoteEscape($this->__('Register')) ?>" class="button"><?= $this->__('Register') ?></button>
         </div>
         <?php if (Mage::helper('checkout')->isContextCheckout()): ?>
