--- a/app/design/frontend/base/default/template/customer/form/login.phtml
+++ b/app/design/frontend/base/default/template/customer/form/login.phtml
@@ -83,7 +83,7 @@
                     <p><?= $this->__('By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.') ?></p>
                 </div>
                 <div class="buttons-set">
-                    <a title="<?= $this->quoteEscape($this->__('Create an account')) ?>" class="button" href="<?= $this->getCreateAccountUrlContext() ?>"><?= $this->__('Create an Account') ?></a>
+                    <a title="<?= $this->quoteEscape($this->__('Create an account')) ?>" class="button" href="<?= $this->getCreateAccountUrlContext() ?>"><?= $this->__('Create an account') ?></a>
                 </div>
             </div>
         </div>
